Fix the responsive issues on mobile screens

--- a/style.css
+++ b/style.css
@@ -155,6 +155,22 @@ li {
   padding-left: 1.3rem;
 }
 
+.projects-full-preview-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 4px 50px;
+}
+
+.project-preview-img {
+  width: 100%;
+  object-fit: contain;
+  border-radius: 14px;
+}
+
 /* Links  */
 
 a {
